2006-03-31  Jonathan Graehl  <graehl@isi.edu>

	* lazy_forest_kbest.hpp: changed from LazyKBestTrees to value-type
	derivation

2006-02-24  Jonathan Graehl  <graehl@isi.edu>

	* shell_escape.hpp: split from io.hpp

2006-02-22  Jonathan Graehl  <graehl@isi.edu>

	* os.hpp (split_dir_file): FIXME: test

2006-02-14  Jonathan Graehl  <graehl@isi.edu>

	* stopwatch.hpp (class stopwatch): adapted from Timer
	(start/stop/totals seems useful - TODO: include memory stats?)

2006-02-13  Jonathan Graehl  <graehl@isi.edu>

	* size_mega.hpp: from funcs.hpp, STL.h

	* memory_stats.hpp: from syntax-decoder STL.h

2006-02-09  Jonathan Graehl  <graehl@isi.edu>

	* LazyKBestTrees.h (jonmay_cycle): verified that missing jonmay
	deriv wasn't a bug but a RTG transcription error

	* test/LazyKbestTrees_test.cpp: run jonmay test case

	* LazyKBestTrees.h: separate add, add_sorted, sort routines.  need
	to find bug in jonmay missing #17,18,19 (symmetrical q0->A(qo qo)
	deriv

2006-02-07  Jonathan Graehl  <graehl@isi.edu>

	* graehl.mk (LARGEFILEFLAGS): added default support for >4g files (linux)

2005-11-16  Jonathan Graehl  <graehl@isi.edu>

	* info_debug.hpp: renamed from Debug.h (conflict with srilm's Debug.h)

	* safe_db.hpp (class safe_db): renamed from SafeDb.h, and use
	BOOST_STATIC_CONSTANT

2005-10-05  Jonathan Graehl  <graehl@isi.edu>

	* os.hpp (safe_tmpnam): is_tmpnam_template, throw_last_error

	* Debug.h: default is debug object, not dbg pointer

2005-09-12  Jonathan Graehl  <graehl@isi.edu>

	* align.hpp: renamed ::align to ::align_up (some conflict with a
	gcc preprocessor macro?)

	* stackalloc.hpp: use align.hpp

	* swapbatch.hpp: use align.hpp

2005-08-19  Jonathan Graehl  <graehl@TRUE>

	* align.hpp: split from funcs.hpp

2005-08-18  Jonathan Graehl  <graehl@TRUE>

	* io.hpp (stringbuf): argc_argv (tested)

2005-06-23  Jonathan Graehl  <graehl@isi.edu>

	* tails_up_hypergraph.hpp: added comments (TailsUpHypergraph used
	to be RevHyperGraph in hypergraph.hpp)
